--- a/caffeine_tracker/apps/record/templates/record/view_events.html
+++ b/caffeine_tracker/apps/record/templates/record/view_events.html
@@ -12,9 +12,9 @@
 </ul>
 {% endif %}
 
-<h1>Events</h1>
+<h1>Notes</h1>
 {% if not events %}
-  <p>There are no recorded events</p>
+  <p>There are no recorded notes</p>
 {% else %}
 <div class="table-wrap">
   <table class="recorded-items data-table stacked-table">
