--- a/caffeine_tracker/apps/record/templates/record/view_records.html
+++ b/caffeine_tracker/apps/record/templates/record/view_records.html
@@ -12,9 +12,9 @@
 </ul>
 {% endif %}
 
-<h1>Recorded items</h1>
+<h1>Recorded intake</h1>
 {% if not records %}
-  <p>There are no recorded items</p>
+  <p>There is no recorded intake</p>
 {% else %}
 <div class="table-wrap">
   <table class="recorded-items data-table stacked-table">
