--- a/caffeine_tracker/apps/record/templates/record/edit_record.html
+++ b/caffeine_tracker/apps/record/templates/record/edit_record.html
@@ -17,7 +17,7 @@
     {% endfor %}
 </ul>
 {% endif %}
-<h1>Item</h1>
+<h1>Intake</h1>
 
 <form action="{{ request.get_full_path }}" method="post" class="{% if advanced_form %}js__hide{% endif %}" id="record-form">
     {% csrf_token %}
