Expandable sub menus.

--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -73,7 +73,7 @@ if ('querySelector' in document && 'addEventListener' in window  && ("classList"
         </ul>
         <div class="menu__sub-menu" data-ct-ui-submenu>
           <h2 class="menu__header" data-ct-ui-submenu-control>Notes</h2><!-- TODO make expander -->
-          <ul class="menu__items">
+          <ul class="menu__items menu--slide">
             <a href="{% url 'add_event' %}"><li class="menu__item">Add</li></a>
             <a href="{% url 'view_events' %}"><li class="menu__item">View recent</li></a>
           </ul>
