--- a/caffeine_tracker/apps/user/templates/user/profile.html
+++ b/caffeine_tracker/apps/user/templates/user/profile.html
@@ -16,12 +16,13 @@
 
   <input type="submit" value="Change" />
 </form>
-
+{% comment %}
 <form method="post" action="{{request.path}}?type=details">
   {% csrf_token %}
   {{ user_form.as_p }}
 
   <input type="submit" value="Change" />
 </form>
+{% endcomment %}
 
 {% endblock %}
