--- a/caffeine_tracker/apps/record/templates/record/edit_record.html
+++ b/caffeine_tracker/apps/record/templates/record/edit_record.html
@@ -19,7 +19,7 @@
 {% endif %}
 <h1>Intake</h1>
 
-<form action="{{ request.get_full_path }}" method="post" class="{% if advanced_form %}js__hide{% endif %}" id="record-form">
+<form class="django-form" action="{{ request.get_full_path }}" method="post" class="{% if advanced_form %}js__hide{% endif %}" id="record-form">
     {% csrf_token %}
     {{ form.as_p }}
     <input class="btn" type="submit" value="Save" />
@@ -91,7 +91,7 @@
       <div data-ct-ui-show-item data-ct-data-new-item class="ui--removed">
         <p>Enter new item.</p>
         <p>
-          <label>Name<input list="items" id="new_item" data-ct-datalist-value/></label>
+          <label>Name<input list="items" id="new_item" type="text" data-ct-datalist-value/></label>
           <datalist id="items" data-ct-value-target="absolute">
           {% for item in items %}
             <option value="{{ item.description }}" data-ct-data-value="{{ item.caffeine }}"/>
