--- a/caffeine_tracker/apps/user/templates/registration/login.html
+++ b/caffeine_tracker/apps/user/templates/registration/login.html
@@ -6,7 +6,7 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form class="django-form" method="post" action="{% url 'django.contrib.auth.views.login' %}">
   {% csrf_token %}
   {{ form.as_p }}
 
