Working on styling.

--- a/caffeine_tracker/apps/record/templates/record/edit_event.html
+++ b/caffeine_tracker/apps/record/templates/record/edit_event.html
@@ -42,7 +42,7 @@
         <p>
           <label><span class="ui--hidden">Time of day</span>
             <select data-ct-data-date="time">
-              <option>--Select time of day--</option>
+              <option class="default">--Select time of day--</option>
               <option value="07:00">Breakfast</option>
               <option value="10:00">Morning</option>
               <option value="13:00">Lunch</option>
