--- a/caffeine_tracker/apps/record/templates/record/edit_record.html
+++ b/caffeine_tracker/apps/record/templates/record/edit_record.html
@@ -43,7 +43,7 @@
           <label><span class="ui--hidden">Time of day</span>
             <select data-ct-data-date="time">
               <option>--Select time of day--</option>
-              <option value="07:00">Breakfast</option>
+              <option class="default" value="07:00">Breakfast</option>
               <option value="10:00">Morning</option>
               <option value="13:00">Lunch</option>
               <option value="16:00">Afternoon</option>
